Setup SQL Server connection, implemented customer service api's and added swagger UI

--- a/Customer.Microservice/appsettings.json
+++ b/Customer.Microservice/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DBConnection": "Server=SUDIPTA-11592\\SQLEXPRESS;Database=CustomerDb;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
